--- a/src/stylus/navigation.styl
+++ b/src/stylus/navigation.styl
@@ -3,6 +3,7 @@
   width: 100%
   margin: 0 auto
   background: pink
+  z-index: 1
 
   +mq-min(1100px)
     max-width: 960px
